# Wealth360AIAdvisor

./: .env.example  .gitignore  README.md  Wealth360 AI Advisor Copilot.docx  pyproject.toml
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_advisor_tools.py  test_compliance_tools.py  test_research_tools.py  test_vector_retriever.py
wealth360/agents/: advisor_agent.py  compliance_agent.py  research_agent.py  state.py  supervisor.py
wealth360/api/: app.py  dependencies.py
wealth360/api/models/: requests.py  responses.py
wealth360/api/routers/: advisor.py  compliance.py  research.py
wealth360/config/: settings.py
wealth360/data/: stub_compliance.py  stub_portfolios.py  stub_research.py
wealth360/llm/: azure_openai.py
wealth360/observability/: decorators.py  setup.py
wealth360/observability/grafana/: dashboard.json  deploy_dashboard.py
wealth360/tools/: advisor_tools.py  compliance_tools.py  research_tools.py  vector_tools.py
wealth360/vector/: client.py  embedder.py  retriever.py
