[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "wealth360-advisor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.0",
    "langgraph-prebuilt>=1.1.0",
    "langchain>=1.3.0",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.0",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.47.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.0.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp-proto-http>=1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-instrumentation-httpx>=0.61b0",
    "pinecone>=5.0.0",
    "httpx>=0.28.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["wealth360*"]

[tool.ruff]
line-length = 100
target-version = "py311"
